--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
     font-family: "Verdana", "Tahoma", "Arial", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background: #E49B0F;
+    background: lightgrey;/* #E49B0F; */
   }
   
   code {
@@ -271,7 +271,6 @@ li {
 }
 
 .listenButton {
-    font-family: "Segoe UI Symbol";
     display: inline-block;
     margin: 10px;
     border-radius: 100%;
@@ -295,7 +294,7 @@ li {
 }
 
 .listenIcon {
-    width: 50%;
+    width: 17px;
     margin-top: 15%;
 }
 
@@ -445,71 +444,6 @@ li {
 
 /* MainScreen */
 
-.itemIcon {
-  opacity: 1;
-}
-
-#icon01 {
-  width: 85%;
-  margin-top: 15%;
-  margin-left: 5%;
-}
-
-#icon02 {
-    width: 87%; 
-    margin-right: 5%;
-    margin-top: 5%;
-}
-
-#icon03 {
-    margin-top: 7%;
-}
-
-
-
-
-#icon04 {
-    width: 97%;
-    margin-top: 13%;
-    margin-left: 2.9%;
-}
-
-/*
-#icon05 {
-    width: 81%; 
-    margin-top: 12%;
-    margin-left: 5%;
-}
-
-#icon04 {
-    width: 71%;
-    margin-top: 13%;
-    margin-left: 3%;
-}
-*/ 
-#icon05 {
-    width: 93%; 
-    margin-top: 7%;
-}
-
-#icon06 {
-    width: 90%;
-    margin-top: 11%;
-}
-
-#icon07 {
-    margin-top: 10%;
-    width: 95%;
-}
-
-#icon08 {
-    margin-top: 10%;
-    width: 95%;
-}
-
-#icon09 {
-    margin-top: 10%;
-}
 
 
 .dictionary {
@@ -577,27 +511,7 @@ li {
     font-size: 28px;
 }
 
-.item {
-    font-family: "Segoe UI Symbol";
-    background-color: dodgerblue;
-    border: 0;
-    margin: auto;
-    color: white;
-    height: 75px;
-    width: 75px;
-    border-radius: 100%;
-    font-size: 32px;
-    margin-top: 15px;
-    box-shadow: 5px 5px 12px lightgrey;
-    -webkit-transition: all 0.5s ease;;
-    -moz-transition: all 0.5s ease;;
-    -o-transition: all 0.5s ease;;
-    transition: all 0.5s ease;
-}
 
-.item:hover {
-    background-color: rgb(10, 124, 225);
-}
 
 .itemName {
     font-size: 12px;
@@ -609,22 +523,6 @@ li {
     -ms-user-select: none; /* Internet Explorer (не поддерживается) */
     -o-user-select: none; /* Opera Presto (не поддерживается) */
     -webkit-user-select: none; /* Google Chrome, Opera Next, Safari */
-}
-
-#idiom1Icon, #idiom2Icon {
-    background-color: deeppink;
-}
-
-#idiom1Icon:hover, #idiom2Icon:hover {
-    background-color: rgb(238, 0, 127);
-}
-
-#proverbIcon {
-    background-color: blueviolet;
-}
-
-#proverbIcon:hover {
-    background-color: rgb(118, 23, 206);
 }
 
 
@@ -1036,3 +934,669 @@ table  tr:nth-child(2n) {
   }
   
  */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ p {
+    font-family: "Verdana", "Geneva", "Tahoma", "Arial", sans-serif;
+    margin: 0;
+    padding: 0;
+  }
+
+  
+#container {
+    margin: auto;
+    display: grid;
+    height: 100vh;
+    width: 177vh;
+    grid-template: repeat(18, minmax(12.5px, 5.555vh)) / repeat(32, minmax(12.5px, 5.555vh));
+
+    background-color: cornsilk;
+    }
+
+  #titleBox {
+    grid-column: 1 / 33;
+    grid-row: 1 / 3;
+    
+    background-color: white;
+    box-shadow: 0px 1px 20px hsla(0, 0%, 66%, 0.8);
+    
+    z-index: 2;
+  }
+
+  #subtitleBox {
+    grid-column: 1 / 23;
+    grid-row: 3 / 5;
+    
+    background-color: whitesmoke;
+  }
+
+  #extraTitleBox {
+    grid-column: 23 / 33;
+    grid-row: 3 / 5;
+
+    background-color: whitesmoke;
+  }
+
+  #itemsBox {
+    grid-column: 1 / 24;
+    grid-row: 5 / 19;
+
+    background-color: whitesmoke;
+  }
+
+  #glossaryBox {
+    grid-column: 24 / 33;
+    grid-row: 5 / 19;
+
+    background-color: whitesmoke;
+    border-left: 0.75vh dotted gainsboro ; 
+  }
+
+
+
+  #innerTitleBox {
+    grid-column: 13 / 21;
+    grid-row: 1 / 3;
+
+    display: flex;
+    justify-content: center;
+
+    z-index: 3;
+  }
+
+  #innerSubtitleBox {
+    grid-column: 3 / 18;
+    grid-row: 3 / 5;
+
+    display: flex;
+    justify-content: left;
+
+    z-index: 3;
+
+    padding: 0;
+  }
+
+  #innerExtraTitleBox {
+    grid-column: 25 / 33;
+    grid-row: 3 / 5;
+
+    display: flex;
+    justify-content: left;
+
+    z-index: 3;
+
+    padding: 0;
+  }
+
+  .itemBox {
+    z-index: 3;
+    display: flex;
+    background-color: whitesmoke;
+  }
+
+  #itemBox01 {
+    grid-column: 3 / 7;
+    grid-row: 5 / 9;
+  }
+
+  #itemBox02 {
+    grid-column: 8 / 12;
+    grid-row: 5 / 9;
+  }
+
+  #itemBox03 {
+    grid-column: 13 / 17;
+    grid-row: 5 / 9;
+  }
+
+  #itemBox04 {
+    grid-column: 18 / 22;
+    grid-row: 5 / 9;
+  }
+
+  #itemBox05 {
+    grid-column: 3 / 7;
+    grid-row: 11 / 15;
+  }
+
+  #itemBox06 {
+    grid-column: 8 / 12;
+    grid-row: 11 / 15;
+  }
+
+  #itemBox07 {
+    z-index: 4;
+
+    grid-column: 13 / 17;
+    grid-row: 11 / 15;
+  }
+
+  #itemBox08 {
+    grid-column: 13 / 17;
+    grid-row: 11 / 15;
+  }
+
+  #itemBox09 {
+    grid-column: 18 / 22;
+    grid-row: 11 / 15;
+  }
+
+  #itemBox10 {
+    grid-column: 26 / 30;
+    grid-row: 5 / 9;
+  }
+
+  .subscriptBox {
+    display: flex;
+    justify-content: center;
+
+    z-index: 2;
+
+    background-color: whitesmoke;
+  }
+
+  #subscriptBox01 {
+    grid-column: 3 / 7;
+    grid-row: 9 / 10;
+  }
+
+  #subscriptBox02 {
+    grid-column: 8 / 12;
+    grid-row: 9 / 10;
+  }
+
+  #subscriptBox03 {
+    grid-column: 13 / 17;
+    grid-row: 9 / 10;
+  }
+
+  #subscriptBox04 {
+    grid-column: 18 / 22;
+    grid-row: 9 / 10;
+  }
+
+  #subscriptBox05 {
+    grid-column: 3 / 7;
+    grid-row: 15 / 16;
+  }
+
+  #subscriptBox06 {
+    grid-column: 8 / 12;
+    grid-row: 15 / 16;
+  }
+
+  #subscriptBox07 {
+    grid-column: 13 / 17;
+    grid-row: 15 / 17;
+
+    z-index: 4;
+  }
+
+  #subscriptBox08 {
+    grid-column: 13 / 17;
+    grid-row: 15 / 16;
+  }
+
+  #subscriptBox09 {
+    grid-column: 18 / 22;
+    grid-row: 15 / 16;
+  }
+
+  #subscriptBox10 {
+    grid-column: 26 / 30;
+    grid-row: 9 / 10;
+  }
+
+  
+  #levelBox {
+    grid-column: 16 / 17;
+    grid-row: 14 / 15;
+    z-index: 5;
+
+    display: flex;
+  }
+
+  .idiomsLevel {
+    border: 0;
+    margin: auto;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(165, 165, 165);
+    z-index: 5;
+    border-radius: 100%;
+    margin-top: -25%;
+    margin-left: -25%;
+    box-shadow: 5px 5px 12px lightgrey;
+    }
+
+    #levelDown {
+      display: none;
+    }
+
+    #levelUp {
+      display: flex;
+    }
+
+    .iconLevel {
+      width: 3vh;
+      margin: auto;
+    }
+
+    #iconLevelDown {
+      padding-top: 10%;
+    }
+  
+
+
+  #logo {
+    font-family: Georgia, "Times New Roman", Times, serif;
+    font-size: 5vh;
+    color: rgb(126, 126, 126);
+
+    align-self: center;
+  }
+
+  #subtitle {
+    font-size: 3.333vh;
+    align-self: center;
+    color: darkgrey;
+  }
+
+  #extraTitle {
+    font-size: 3.333vh;
+    align-self: center;
+    color: darkgrey;
+    margin-left: 2vh;
+  }
+
+  .subscript {
+    font-size: 2vh;
+    text-align: center;
+    font-weight: bold;
+    color: rgb(44, 44, 44);
+
+    -moz-user-select: none; /* Mozilla Firefox */
+    -ms-user-select: none; /* Internet Explorer (не поддерживается) */
+    -o-user-select: none; /* Opera Presto (не поддерживается) */
+    -webkit-user-select: none; /* Google Chrome, Opera Next, Safari */
+  }
+
+
+
+
+
+
+
+
+  @media all and (max-width: 550px) {
+
+    #container {
+      height: 177vw;
+      width: 100vw;
+      grid-template: repeat(32, minmax(12.5px, 5.53125vw)) / repeat(18, minmax(12.5px, 5.53125vw));
+      }
+
+      #titleBox {
+        grid-column: 1 / 19;
+        grid-row: 1 / 4;
+      }
+
+      #subtitleBox {
+        grid-column: 1 / 19;
+        grid-row: 4 / 7;
+      }
+
+      #extraTitleBox {
+        grid-column: 1 / 19;
+        grid-row: 24 / 27;
+      }
+    
+      #itemsBox {
+        grid-column: 1 / 19;
+        grid-row: 7 / 24;
+      }
+
+      #glossaryBox {
+        grid-column: 1 / 19;
+        grid-row: 27 / 33;
+      } 
+
+
+
+      #innerTitleBox {
+        grid-column: 6 / 14;
+        grid-row: 2 / 3;
+      }
+
+      #innerSubtitleBox {
+        grid-column: 3 / 16;
+        grid-row: 4 / 7;
+      }
+
+      #innerExtraTitleBox {
+        grid-column: 3 / 16;
+        grid-row: 24 / 27;
+      }
+      
+      #itemBox01 {
+        grid-column: 3 / 7;
+        grid-row: 7 / 11;
+      }
+    
+      #itemBox02 {
+        grid-column: 8 / 12;
+        grid-row: 7 / 11;
+      }
+    
+      #itemBox03 {
+        grid-column: 13 / 17;
+        grid-row: 7 / 11;
+      }
+    
+      #itemBox04 {
+        grid-column: 3 / 7;
+        grid-row: 13 / 17;
+      }
+    
+      #itemBox05 {
+        grid-column: 8 / 12;
+        grid-row: 13 / 17;
+      }
+    
+      #itemBox06 {
+        grid-column: 13 / 17;
+        grid-row: 13 / 17;
+      }
+    
+      #itemBox07 {
+        grid-column: 3 / 7;
+        grid-row: 19 / 23;
+      }
+    
+      #itemBox08 {
+        grid-column: 8 / 12;
+        grid-row: 19 / 23;
+      }
+    
+      #itemBox09 {
+        grid-column: 13 / 17;
+        grid-row: 19 / 23;
+      }
+
+      #itemBox10 {
+        grid-column: 8 / 12;
+        grid-row: 27 / 31;
+      }
+    
+      #subscriptBox01 {
+        grid-column: 3 / 7;
+        grid-row: 11 / 12;
+      }
+    
+      #subscriptBox02 {
+        grid-column: 8 / 12;
+        grid-row: 11 / 12;
+      }
+    
+      #subscriptBox03 {
+        grid-column: 13 / 17;
+        grid-row: 11 / 12;
+      }
+    
+      #subscriptBox04 {
+        grid-column: 3 / 7;
+        grid-row: 17 / 18;
+      }
+    
+      #subscriptBox05 {
+        grid-column: 8 / 12;
+        grid-row: 17 / 18;
+      }
+    
+      #subscriptBox06 {
+        grid-column: 13 / 17;
+        grid-row: 17 / 18;
+      }
+    
+      #subscriptBox07 {
+        grid-column: 3 / 7;
+        grid-row: 23 / 24;  
+      }
+    
+      #subscriptBox08 {
+        grid-column: 8 / 12;
+        grid-row: 23 / 24;    
+      }
+    
+      #subscriptBox09 {
+        grid-column: 13 / 17;
+        grid-row: 23 / 24;
+      }
+
+      #subscriptBox10 {
+        grid-column: 8 / 12;
+        grid-row: 31 / 32;
+      }
+
+
+      
+      #logo {
+        font-size: 7vw;
+      }
+
+      #subtitle {
+        font-size: 4.65vw;
+      }
+
+      #extraTitle {
+        font-size: 4.65vw;
+        margin-left: 0;
+        margin-top: 2vw;
+      }
+
+      .subscript {
+        font-size: 2.8vw;
+      }
+
+      #levelBox {
+        display: none;
+      }
+      
+      #glossaryBox {
+        border-left: none;
+      }
+  }
+
+
+  @media all and (max-height: 400px)  {
+
+    #logo {
+      font-size: 16px;
+    }
+
+    #subtitle {
+      font-size: 11px; 
+    }
+
+    #extraTitle {
+      font-size: 11px;
+      margin-left: 0;
+    }
+
+    .subscript {
+      font-size: 8px;
+    }
+  }
+
+
+
+  .item {
+    background-color: dodgerblue;
+    border: 0;
+    margin: auto;
+    color: white;
+    height: 80%;
+    width: 80%;
+    border-radius: 100%;
+    box-shadow: 5px 5px 12px lightgrey;
+    -webkit-transition: all 0.5s ease;;
+    -moz-transition: all 0.5s ease;;
+    -o-transition: all 0.5s ease;;
+    transition: all 0.5s ease;
+}
+
+.item:hover {
+    background-color: rgb(10, 124, 225);
+}
+
+
+#idiom1Item, #idiom2Item {
+    background-color: deeppink;
+}
+
+#idiom1Item:hover, #idiom2Item:hover {
+    background-color: rgb(238, 0, 127);
+}
+
+#proverbItem {
+    background-color: blueviolet;
+}
+
+#proverbItem:hover {
+    background-color: rgb(118, 23, 206);
+}
+
+#glossaryItem {
+    background-color: rgb(255, 215, 0);
+}
+
+#glossaryItem:hover {
+  background-color: rgb(243, 203, 0);
+}
+
+.icon {
+    opacity: 1;
+  }
+  
+  #icon01 {
+    width: 85%;
+    margin-top: 15%;
+    margin-left: 5%;
+  }
+  
+  #icon02 {
+      width: 87%; 
+      margin-right: 5%;
+      margin-top: 5%;
+  }
+  
+  #icon03 {
+      margin-top: 7%;
+  }
+  
+  #icon04 {
+      width: 97%;
+      margin-top: 13%;
+      margin-left: 2.9%;
+  }
+  
+  /*
+  #icon05 {
+      width: 81%; 
+      margin-top: 12%;
+      margin-left: 5%;
+  }
+  
+  #icon04 {
+      width: 71%;
+      margin-top: 13%;
+      margin-left: 3%;
+  }
+  */ 
+
+  #icon05 {
+      width: 90%; 
+      margin-top: 5%;
+  }
+  
+  #icon06 {
+      width: 90%;
+      margin-top: 4%;
+  }
+  
+  #icon07 {
+      margin-top: 11.2%;
+      width: 95%;
+  }
+  
+  #icon08 {
+      margin-top: 9%;
+      margin-left: -2.5%;
+      width: 95%;
+  }
+  
+  #icon09 {
+      margin-top: 10%;
+  }
+  
+  #icon10 {
+    width: 90%;
+    margin-top: 5%;
+  }
+
+ 
