--- a/src/index.css
+++ b/src/index.css
@@ -550,6 +550,7 @@ li {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 
   width: 100%;
   height: 100%;
@@ -561,6 +562,7 @@ li {
 #about {
   text-align: center;
   font-size: 2.7vh;
+  margin-top: 5%;
 }
 
 #aboutClose {
@@ -577,6 +579,27 @@ li {
   align-self: flex-end;
   justify-self: flex-start;
   width: 65%;
+}
+
+#walletBox {
+  margin-top: 4%;
+  border-radius: 2px;
+  border: 1px solid lightgrey;
+  background-color: whitesmoke;
+  width: 14.5%;
+  height: 9.5%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#walletBox:hover {
+  border: 1px solid silver;
+}
+
+#wallet {
+  width: 42%;
+  margin-top: -5%;
 }
  
 /*EXERCISE SCREEN*/
